fix(side-panel): fix side panel alignment issues (#2280)
* fix(side-panel): fix side panel icons alignment

* fix(sidebar): fix icon jump in sidebar

* fix(sidepanel): add more delay while loading iteration

--- a/src/app/components/group-types-panel/group-types-panel.component.less
+++ b/src/app/components/group-types-panel/group-types-panel.component.less
@@ -1,8 +1,11 @@
 @import (reference) '../../../assets/stylesheets/shared/_variables';
 
 .f8-group-filter {
+  float: left;
+  width: 100%;
+  margin: 1px 0;
   &__type {
-    display: inline-block;
+    float: left;
     width: 100%;
     padding: 20px 15px;
     font-size: 15px;
