--- a/src/app/components/iterations-panel/iterations-panel.component.less
+++ b/src/app/components/iterations-panel/iterations-panel.component.less
@@ -7,9 +7,11 @@
     color: @color-pf-white;
   }
   &__panel {
+    float: left;
+    width: 100%;
     &-hdr {
+      float: left;
       width: 100%;
-      display: inline-block;
       padding: 20px 15px;
       border-left: 4px solid;
       border-left-color: transparent;
