--- a/src/app/components/planner-list/planner-list.component.less
+++ b/src/app/components/planner-list/planner-list.component.less
@@ -76,7 +76,6 @@
       display: flex;
       .list-pf-container {
         padding: 0 15px !important;
-        margin: 5px 0;
       }
     }
     .tree-children {
